
2007-04-16  Paul Lindner  <lindner@inuus.com>

	* Add notes to README about MacOS, libevent and kqueue.

	* Windows Patch integration -- part 1, warnings elimination.

	
2007-04-12  Paul Lindner  <lindner@mirth.inuus.com>

	* Allow changes to the verbosity level of the server with a new
	  "verbosity" command and some compiler cleanups. 
          Patch contributed by Paolo Borelli <paolo.borelli@gmail.com>.

2007-04-08  Paul Lindner  <lindner@inuus.com>

	* Add cleanup patch from "Tim Yardley" <liquid@haveheart.com> to
	  clean up source spacing issues, fix -Wall warnings, add some
	  null checks, adds asserts at the top of each function for any
	  use of conn *c without checking to see if c is NULL first.

        * Also adjust clean-whitespace.pl to clean *.ac files.  Add
          script to test-suite to test for tabs.

2007-04-04  Paul Lindner  <lindner@inuus.com>

	* Add clarification of flush_all in the protocol docs
	  from Elizabeth Mattijsen <liz@dijkmat.nl>

2007-03-31  Paul Lindner  <lindner@inuus.com>

	* Add patch from Eli Bingham <eli@pandora.com> to 
	  re-enable the -n switch to memcached.

2007-03-20  Paul Lindner  <lindner@inuus.com>
	* Add patch to collect eviction statistics from
          Jean-Francois BUSTARRET <jfbustarret@wat.tv>.

        * Updated docs, added new test cases for t/stats.t

2007-03-18  Paul Lindner  <lindner@inuus.com>

	* Add more test cases using larger buffer sizes up to and greater
	  than 1MB.

	* Remove unused parameter to item_size_ok()

	* Use a single printf() in usage()

	* Add a failing test for conforming with maximum connections.

2007-03-17
	* crash fix from Thomas van Gulick <thomas@partyflock.nl> in
	  conn_shrink(), passing &ptr, instead of ptr to realloc().

2007-03-05  Paul Lindner  <lindner@inuus.com>
	* Fix a number of places where (s)printf calls were using unsigned
	  or signed formats that did not match their arguments.

	* Add support for stdbool.h and stdint.h to use the bool and
	  uint8_t types.